compiler/testData/cli/jvm/internalArgEnableLanguageFeature.out
compiler/testData/cli/jvm/internalArgEnableLanguageFeature.kt:9:1: error: 'Class Impl' overrides 'var' property 'a' with inherited 'val' property 'public final val /Open.a: kotlin/String
    public get(): kotlin/String'.
class Impl : Open(), Interface
^
COMPILATION_ERROR
